--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
         }
     ],
     "require": {
-        "nette/utils": "2.3.*|2.4.*"
+        "php": "^7.1.0",
+        "ext-mbstring": "*",
+        "nette/utils": "2.3.*|2.4.*",
+        "nette/di": "2.3.*|2.4.*",
+        "nette/neon": "2.*"
     },
     "minimum-stability": "stable",
     "require-dev": {
