Pridani php 7.3 a 7.4 do travisu
- Pridani phpstan zavislosti
- Nastaveni minimalni verze balicku
- Povyseni nette/tester
- Spostet phpstan na travisu
- Dropnuti podpory nette 2.3
- Fix phpstan:

 a) Line: 25 - Negated boolean expression is always false. - Metoda vzdy vraci instanci interface, muzeme tedy s klidem  odstranit.

--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,14 @@
     "require": {
         "php": "^7.1.0",
         "ext-mbstring": "*",
-        "nette/utils": "2.5.*",
-        "nette/di": "2.3.*|2.4.*",
-        "nette/neon": "2.*"
+        "nette/utils": "~2.5.4",
+        "nette/di": "~2.4.14",
+        "nette/neon": "~2.4.3"
     },
     "require-dev": {
-        "nette/tester": "1.7.*",
-        "pd/coding-standard": "1.7.*"
+        "nette/tester": "2.3.*",
+        "pd/coding-standard": "1.7.*",
+        "phpstan/phpstan": "0.12.11"
     },
     "autoload": {
         "psr-4": {
