--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,12 @@ language: php
 php:
     - 7.1
     - 7.2
+    - 7.3
+    - 7.4
 
 script:
     - vendor/bin/tester tests/
+    - vendor/bin/phpstan analyse -l 5 src
 
 before_script:
     - travis_retry composer install --no-interaction --prefer-dist
