--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,9 @@
     "require": {
         "php": "7.4.* || 8.0.*",
         "ext-mbstring": "*",
-        "nette/utils": "~2.5.4",
-        "nette/di": "~2.4.14",
-        "nette/neon": "~2.4.3"
+        "nette/utils": "~2.5.4|~3.0.0|~3.1.0",
+        "nette/di": "~2.4.14|~3.0.0",
+        "nette/neon": "~2.4.3|~3.0"
     },
     "require-dev": {
         "nette/tester": "2.3.*",
