--- a/.github/workflows/cs.yml
+++ b/.github/workflows/cs.yml
@@ -1,17 +1,12 @@
-name: Testy
+name: Code Style
 
 on:
   pull_request:
     branches: [ master ]
 
 jobs:
-  tests:
+  phpcs:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        php-versions: ['7.4', '8.0']
-    name: Jednotkové testy
     steps:
       - name: Informace o prostředí
         run: |
@@ -23,21 +18,15 @@ jobs:
       - name: Setup PHP
         uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php-versions }}
+          php-version: 8.0
           tools: composer
-          coverage: none
 
       - name: Composer
         run: |
           composer validate
           composer install
 
-      - name: Jednotkové testy
+      - name: Coding Standard
         run: |
-          vendor/bin/tester tests/ -s -C
-
-      - if: failure()
-        uses: actions/upload-artifact@v2
-        with:
-            name: output
-            path: tests/**/output
+          vendor/bin/phpcs src/ --standard=vendor/pd/coding-standard/src/PeckaCodingStandard/ruleset.xml
+          vendor/bin/phpcs src/ --standard=vendor/pd/coding-standard/src/PeckaCodingStandardStrict/ruleset.xml
