--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": "^7.1.0",
+        "php": "7.4.* || 8.0.*",
         "ext-mbstring": "*",
         "nette/utils": "~2.5.4",
         "nette/di": "~2.4.14",
@@ -17,7 +17,7 @@
     },
     "require-dev": {
         "nette/tester": "2.3.*",
-        "pd/coding-standard": "1.7.*",
+        "pd/coding-standard": "v1.27.*",
         "phpstan/phpstan": "0.12.76"
     },
     "autoload": {
