--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": "7.4.* || 8.0.*",
+        "php": "7.4.* || 8.0.* || 8.1.*",
         "ext-mbstring": "*",
         "nette/utils": "~2.5.4|~3.0.0|~3.1.0",
         "nette/di": "~2.4.14|~3.0.0",
