Povoleni nette/utils ~3.2.0

--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "php": "7.4.* || 8.0.* || 8.1.*",
         "ext-mbstring": "*",
-        "nette/utils": "~2.5.4|~3.0.0|~3.1.0",
+        "nette/utils": "~2.5.4|~3.0.0|~3.1.0|~3.2.0",
         "nette/di": "~2.4.14|~3.0.0",
         "nette/neon": "~2.4.3|~3.0"
     },
