--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,11 @@
         }
     ],
     "require": {
-        "php": "7.4.* || 8.0.* || 8.1.*",
+        "php": "^8.0",
         "ext-mbstring": "*",
-        "nette/utils": "~2.5.4|~3.0.0|~3.1.0|~3.2.0",
-        "nette/di": "~2.4.14|~3.0.0",
-        "nette/neon": "~2.4.3|~3.0"
+        "nette/utils": "^3.0",
+        "nette/di": "^3.0",
+        "nette/neon": "^3.0"
     },
     "require-dev": {
         "nette/tester": "2.3.*",
@@ -29,6 +29,10 @@
         "psr-4": {
             "PdTests\\Holidays\\": "tests"
         }
+    },
+    "config": {
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     }
-
 }
